trying to fix the scrolling issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -235,11 +235,10 @@ body {
 
 @media (max-width: 600px) {
 	body {
-		position: fixed;
 		padding: 0px;
 		margin: 0px;
 		top: 0px;
-		overflow: hidden;
+		/*overflow: hidden;*/
 		background-image: linear-gradient(rgb(69,87,232,0.9) -20%, rgb(195,20,50,0.6), #240b36 120%);
 	}
 
